sfdx-project/force-app/main/default/objects/Candidate__c/fields/Current_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Company__c</fullName>
    <description>The candidate&apos;s current company</description>
    <label>Current Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>