sfdx-project/force-app/main/default/objects/Candidate__c/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <description>The candidate&apos;s current position at their company</description>
    <label>Current Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>