sfdx-project/force-app/main/default/objects/Candidate__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>The ID of the candidate in some external system</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>